--- a/android-demo/app/build.gradle
+++ b/android-demo/app/build.gradle
@@ -16,7 +16,7 @@ android {
         useNewCruncher = false
     }
     defaultConfig {
-        applicationId "com.caihongzhibo.phonelive"
+        applicationId "com.dingdingzhibo.phonelive2"
         minSdkVersion 19
         targetSdkVersion 25
         versionCode 1
