--- a/android-demo/app/src/main/AndroidManifest.xml
+++ b/android-demo/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
     <application
         android:name="AppContext"
         android:allowBackup="true"
-        android:icon="@mipmap/ddlogo"
+        android:icon="@mipmap/dxlogo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
         >
